final exam commit

--- a/app/views/bios/edit.html.erb
+++ b/app/views/bios/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Bio</h1>
+<h1></h1>
 
 <%= render 'form', bio: @bio %>
 
-<%= link_to 'Show', @bio %> |
-<%= link_to 'Back', bios_path %>
+<%= link_to 'Show', @bio %>
