--- a/app/views/bios/new.html.erb
+++ b/app/views/bios/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Bio</h1>
+<h1>Welcome New User!</h1>
 
-<%= render 'form', bio: @bio %>
+<p> Please complete your profile before continuing </p>
 
-<%= link_to 'Back', bios_path %>
